# server

android/: Android.mk
proj.ios_mac/server.xcodeproj/: project.pbxproj
proj.ios_mac/server.xcodeproj/xcuserdata/kiet.xcuserdatad/xcschemes/: xcschememanagement.plist
src/sf/: CMakeLists.txt  Forward.hpp  Macro.hpp
src/sf/connection/: ConnectionManager.cpp  ConnectionManager.hpp  ConnectionState.hpp  GuardedConnection.cpp  GuardedConnection.hpp  IConnection.hpp  IConnectionManager.hpp  ILoginInfo.hpp  LoginFlow.cpp  LoginFlow.hpp  LogoutFlow.cpp  LogoutFlow.hpp  ServerConnection.cpp  ServerConnection.hpp
src/sf/core/: Bridge.cpp  Bridge.hpp  EventDispatcher.cpp  EventDispatcher.hpp  IBridge.hpp  IEventDispatcher.hpp  IListener.hpp  ILogManager.hpp  ILogger.hpp  IRequest.cpp  IRequest.hpp  IRequestHandler.hpp  LogManager.cpp  LogManager.hpp  Logger.cpp  Logger.hpp  RequestHandler.cpp  RequestHandler.hpp
src/sf/data/: Data.cpp  Data.hpp  DataFetcher.cpp  DataFetcher.hpp  DataPusher.cpp  DataPusher.hpp  DataResolver.cpp  DataResolver.hpp  DataSyncer.cpp  DataSyncer.hpp  IData.hpp  IDataResolver.hpp  IDataTransfer.hpp  IProperty.hpp  Property.cpp  Property.hpp  SFGoldObserver.cpp  SFGoldObserver.hpp  SFRubyObserver.cpp  SFRubyObserver.hpp
src/sf/listeners/: ConnectionListener.cpp  ConnectionListener.hpp  ConnectionLostListener.cpp  ConnectionLostListener.hpp  ConnectionResumeListener.cpp  ConnectionResumeListener.hpp  ConnectionRetryListener.cpp  ConnectionRetryListener.hpp  ExtensionResponseListener.cpp  ExtensionResponseListener.hpp  HandshakeListener.cpp  HandshakeListener.hpp  LoginErrorListener.cpp  LoginErrorListener.hpp  LoginListener.cpp  LoginListener.hpp  LogoutListener.cpp  LogoutListener.hpp  PingPongListener.cpp  PingPongListener.hpp  RoomAddListener.cpp  RoomAddListener.hpp  RoomCreationErrorListener.cpp  RoomCreationErrorListener.hpp  RoomJoinErrorListener.cpp  RoomJoinErrorListener.hpp  RoomJoinListener.cpp  RoomJoinListener.hpp  RoomRemoveListener.cpp  RoomRemoveListener.hpp  SetRoomVariablesListener.cpp  SetRoomVariablesListener.hpp  SetUserVariablesListener.cpp  SetUserVariablesListener.hpp  SocketErrorListener.cpp  SocketErrorListener.hpp  UserEnterRoomListener.cpp  UserEnterRoomListener.hpp  UserExitRoomListener.cpp  UserExitRoomListener.hpp
src/sf/requests/: DataRequest.cpp  DataRequest.hpp  KeepAliveRequest.cpp  KeepAliveRequest.hpp  RemoveUserRequest.cpp  RemoveUserRequest.hpp  SetGoldRequest.cpp  SetGoldRequest.hpp  SetRubyRequest.cpp  SetRubyRequest.hpp  UpdateDataRequest.cpp  UpdateDataRequest.hpp
src/sf/utils/: AsyncManager.hpp  BiMap.hpp  ExponentialBackoff.cpp  ExponentialBackoff.hpp  ExponentialBackoffOptions.cpp  ExponentialBackoffOptions.hpp  RandomHelper.cpp  RandomHelper.hpp
